--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   color: white;
   font-size: 16px;
   line-height: 20px;
+  position: absolute;
 }
 
 a {
@@ -11,12 +12,27 @@ a {
 }
 
 .header {
-  height: 50px;
+  width: 100%;
+  height: 80px;
   background-color: #080808;
   color: white;
   line-height: 50px;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.logo {
+  height: 80px;
+  width: 80px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.title {
+  left: 0px; 
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 15px;
 }
 
 .video {
@@ -28,6 +44,7 @@ a {
 }
 
 .description {
+  position: relative;
   margin: 30px;
 }
 
